# executable('test_echo', 'test_echo.cpp',
#   include_directories: includes,
#   cpp_args: pir_compile_args,
#   dependencies: pir_dependencies)

# executable('test_base64', 'test_base64.cpp',
#   include_directories: includes,
#   cpp_args: pir_compile_args,
#   dependencies: pir_dependencies)

# executable('test_main', 'test_main.cpp',
#   include_directories: includes,
#   cpp_args: pir_compile_args,
#   dependencies: pir_dependencies)

# executable('test_proxy', 'test_proxy.cpp',
#   include_directories: includes,
#   cpp_args: pir_compile_args,
#   dependencies: pir_dependencies)

# executable('test_data', 'test_data.cpp',
#   include_directories: includes,
#   cpp_args: pir_compile_args,
#   dependencies: pir_dependencies)

# executable('test_query', 'test_query.cpp',
#   include_directories: includes,
#   cpp_args: pir_compile_args,
#   dependencies: pir_dependencies)

executable('test_buffersocket', 'test_buffersocket.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_tcpsocket', 'test_tcpsocket.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_hash', 'test_hash.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)
# executable('test_ecc', 'test_eccopenssl.cpp',
#   include_directories: includes,
#   cpp_args: crypto_compile_args,
#   dependencies: crypto_dependencies)
executable('test_ecc_open', 'test_fuecc_open.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)
executable('test_ot_base', 'test_ot_base.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_cereal', 'test_cereal.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_iknp', 'test_iknp.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_kkrt', 'test_kkrt.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_short_enc', 'test_short_enc.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_cm20', 'test_cm20.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)

executable('test_botan', 'test_botan.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)


  executable('test_kkot', 'test_kkot.cpp',
  include_directories: includes,
  cpp_args: crypto_compile_args,
  dependencies: crypto_dependencies)
